--- a/gb/20/9/6/n12383355.md
+++ b/gb/20/9/6/n12383355.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ylytvp3322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ylytvp3322/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ylytvp3322/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ylytvp3322/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ylytvp3322/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ylytvp3322/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ylytvp3322/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ylytvp3322/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【大选观察】谁想干预大选？川普高官齐指中共</h2>
-<a href="https://git.io/JUGmK"><img width="600" src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ylytvp3322/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dlph7fabhsbfp.cloudfront.net/R5gnD3g6a"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>谁想干预美国大选？川普高官齐指中共美国情报部门警告：外国势力正暗潮涌动，想要左右这场决定世界时局的选举。为何把中共看作是选举最大的威胁？（Getty Images／大纪元合成图）
 </h6>
 <hr>
-	<p>【大纪元2020年09月06日讯】大家好，欢迎收看本期的《<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E8%A7%82%E5%AF%9F.md#1">大选观察</a>》节目，我是Iris，陶明。</p>
-<p>就在昨天，<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">美国大选</a>的倒计时正式迈入了60天。随着竞争的升温，政坛上固然上演着一场火花四溅的大戏，但<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E9%83%A8%E9%97%A8.md#1">美国情报部门</a>最近却警告：明枪易躲，暗箭难防，外国势力正暗潮涌动，想要左右这场决定世界时局的选举。</p>
-<p>在今天的节目中，我们来探讨，一众掌握着美国最高、最准确情报的高官，为何把<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>看作选举的最大威胁？而成为众矢之的的中共，又在其中扮演着何种角色。</p>
-<p><center><a src=""></a><a href="https://git.io/JUGmK"><img width="600" src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ylytvp3322/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/MLETLV7qGJU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
-<h2>国安顾问奥布莱恩：<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>有干预美国政治的最大计划</h2>
-<p>在过去的数天中，川普政府中被外界誉为“<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E5%89%BF%E5%85%B1%E5%9B%9B%E9%AA%91%E5%A3%AB.md#1">剿共四骑士</a>”中的三位，都接连现身，剑指中共，明言中共想要干预<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">美国大选</a>，其危险程度远超俄罗斯。</p>
+	<p>【大纪元2020年09月06日讯】大家好，欢迎收看本期的《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E8%A7%82%E5%AF%9F.md#1">大选观察</a>》节目，我是Iris，陶明。</p>
+<p>就在昨天，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">美国大选</a>的倒计时正式迈入了60天。随着竞争的升温，政坛上固然上演着一场火花四溅的大戏，但<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E9%83%A8%E9%97%A8.md#1">美国情报部门</a>最近却警告：明枪易躲，暗箭难防，外国势力正暗潮涌动，想要左右这场决定世界时局的选举。</p>
+<p>在今天的节目中，我们来探讨，一众掌握着美国最高、最准确情报的高官，为何把<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>看作选举的最大威胁？而成为众矢之的的中共，又在其中扮演着何种角色。</p>
+<p><center><a src=""></a><a href="https://dlph7fabhsbfp.cloudfront.net/R5gnD3g6a"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/MLETLV7qGJU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<h2>国安顾问奥布莱恩：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>有干预美国政治的最大计划</h2>
+<p>在过去的数天中，川普政府中被外界誉为“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%89%BF%E5%85%B1%E5%9B%9B%E9%AA%91%E5%A3%AB.md#1">剿共四骑士</a>”中的三位，都接连现身，剑指中共，明言中共想要干预<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.md#1">美国大选</a>，其危险程度远超俄罗斯。</p>
 <p>9月4日（周五），国安顾问奥布莱恩（Robert O&#8217;Brien）在白宫记者会上，谈到外国干预美国大选的问题。他直言不讳地说，“美国的情报部门已经搞得非常清楚了，首先就是中国”，其次才轮到伊朗和俄罗斯。</p>
 <p>他说，之所以如此，是因为中共有着能去左右美国政治的最大计划。他还把中国称作“寻求干扰我们选举的敌对国家（adversary countries）”之一。</p>
 <p>早在6月， 奥布莱恩就身为“四骑士”之一，发表过关于中共的重磅演讲。他当时就说，美国已经醒来，看清自己过去对中共的认识错误，看清中共是对美国及盟国的最大威胁。而川普政府，是绝不会向中共低头的。</p>
@@ -48,51 +48,51 @@
 <p>以上的每一个人都针对中共讲了很多，而就在9月4日（周五）晚上，川普总统召开记者会，就为我们总结了以上的种种。</p>
 <h2>川普：“唯独和中国关系不好 但这是我的选择”</h2>
 <p>川普首先把问题重点放在中共上，否认了“俄罗斯比中共威胁更大”这一观点。他说，很多人一直在俄罗斯来，俄罗斯去，但我觉得中国才是你们要谈论的国家。中共在做的事情，与其它国家相比，是“糟糕多了”。</p>
-<p>他还讽刺而风趣地谈到，自己与各国领袖的关系都很好，甚至包括与俄罗斯，唯独现在“我和中国合不来，但那是我的选择。”</p>
-<p>之所以把矛头指向中国，川普明言，是因为中共管治疫情不力，危害全世界。他说，“你们看看中国没有把“中国病毒”（China virus）在自己的国家管好，发生了什么样的后果，看看他们对全世界188个国家都做了什么。”</p>
+<p>他还讽刺而风趣地谈到，自己与各国领袖的关系都很好，甚至包括与俄罗斯，唯独现在“我和中国合不来，但那是我的选择”。</p>
+<p>之所以把矛头指向中国，川普明言，是因为中共管治疫情不力，危害全世界。他说，“你们看看中国没有把‘中国病毒’（China virus）在自己的国家管好，发生了什么样的后果，看看他们对全世界188个国家都做了什么。”</p>
 <p>的确，美国强大的情报系统，让川普总统等美国政要都意识到了，种种罪恶的根源和始作俑者，正是中共。也正因如此，针对中共的种种抨击和制裁，也在美国选举的背景下一幕幕拉开。而数位政府高官在大选问题上剑指中共，是否在为川普政府下一步行动做铺垫？我们将拭目以待。</p>
-<p>《<ahref="https://github.com/ylytvp3322/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E8%A7%82%E5%AF%9F.md#1">大选观察</a>》制作组#</p>
+<p>《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E8%A7%82%E5%AF%9F.md#1">大选观察</a>》制作组#</p>
 <p>责任编辑：李昊</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/8/25/n12356888.md#1">【欺世大观】汉奸毛泽东：秘密结盟 卖国求生</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/8/27/n12360608.md#1">【大选观察】共和党大会 非裔和古巴裔挺川普</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/8/29/n12365943.md#1">【大选观察】解读最新民调 川普胜算几何？</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/1/n12372041.md#1">【大选观察】15次讲中国 川普提名演讲解读</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/25/n12356888.md#1">【欺世大观】汉奸毛泽东：秘密结盟 卖国求生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/27/n12360608.md#1">【大选观察】共和党大会 非裔和古巴裔挺川普</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/29/n12365943.md#1">【大选观察】解读最新民调 川普胜算几何？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/1/n12372041.md#1">【大选观察】15次讲中国 川普提名演讲解读</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/25/n10809395.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（3）</a></li><li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/6/13/n12183566.md#1">贾雨村，一个从来不曾过时的现实主义者</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/8/26/n12358223.md#1">中元节民俗缘何来？为何建醮普渡？</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/4/n12381260.md#1">【重播】川普发布会：经济V型复苏 纾困遇阻</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/5/n12382539.md#1">【纪元播报】蓬佩奥：几周内推出更多限制中国学生政策</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/5/n12382333.md#1">【纽约调查】电信诈骗花样翻新 骗子玩心理战</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/4/n12380525.md#1">网传共机遭台湾击落 台湾空军回应相关讯息</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12378843.md#1">【新闻看点】中共少将泄疫苗真相？地下钱庄探秘</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/4/n12380196.md#1">网传中共一架战斗机在广西坠毁 机师重伤</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12376709.md#1">巨石强森惊爆确诊中共肺炎 全家都中镖</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12378551.md#1">郭美美出狱后换脸改名 开设新账号重新炫富</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/4/n12379936.md#1">邰智源总统府站哨 蔡英文：今天的宪兵胖了点</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12379060.md#1">小花为何要求全家听她念书 孙俪爆逗趣原因</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/4/n12381220.md#1">中共恐吓捷克和打压台湾 电视名嘴狠酸获赞爆</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12377585.md#1">美国警察逮捕市长 网民：中共公安敢吗？</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12377154.md#1">传说获证实 首任市长心脏安置于比利时喷泉内</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/3/n12377214.md#1">88岁主人摔倒 机智犬引环卫工及时搭救</a></li>
-<li><a href="https://github.com/ylytvp3322/djy/blob/master/gb/20/9/4/n12379905.md#1">法国女子的变装戏法 迷住老牌魔术师的眼睛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ylytvp3322/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ylytvp3322/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/6/n12383355.htm">【大选观察】谁想干预大选？川普高官齐指中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/6/n12383355.htm">【大选观察】谁想干预大选？川普高官齐指中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ylytvp3322/djy/blob/master/gb/20/9/6/n12383355.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ylytvp3322/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ylytvp3322/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ylytvp3322/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ylytvp3322/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylytvp3322/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/9/6/n12383355.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
